Add language files for puzzle

--- a/lang/en.json
+++ b/lang/en.json
@@ -11,6 +11,20 @@
   "components.chat.changeChannel": "Change Channel",
   "components.chat.changeToDefaultChannel": "Change To Default Channel",
   "components.chat.channelAsDefault": "Default ({channelName})",
+  "components.puzzle.createdAt": "Created At",
+  "components.puzzle.genre_classic": "Classic",
+  "components.puzzle.genre_littleAlbat": "Little Albat",
+  "components.puzzle.genre_others": "Others",
+  "components.puzzle.genre_twentyQuestions": "Twenty Questions",
+  "components.puzzle.lastupdate": "Last Update",
+  "components.puzzle.solvedAt": "Solved At",
+  "components.puzzle.status_dazed": "dazed",
+  "components.puzzle.status_forbidden": "forbidden",
+  "components.puzzle.status_hidden": "hidden",
+  "components.puzzle.status_solved": "solved",
+  "components.puzzle.status_undergoing": "undergoing",
+  "components.puzzle.yami_longtermYami": "Long-term Yami",
+  "components.puzzle.yami_yami": "Yami",
   "components.user.anonymousUser": "Anonymous User",
   "home.bestPuzzleOfLastMonth": "Most Valuable Puzzles of the Last Month",
   "home.body": "Cindy is an active community for chatting lateral thinking problems.",
@@ -23,6 +37,9 @@
   "puzzle.header": "Puzzle List",
   "puzzle.newPuzzle": "New puzzle",
   "puzzle.title": "Puzzles",
+  "ranking.description": "Ranking board for users",
+  "ranking.header": "Ranking",
+  "ranking.title": "Ranking",
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
   "toolbar.wiki": "Wiki"
