--- a/lang/ja.json
+++ b/lang/ja.json
@@ -11,6 +11,20 @@
   "components.chat.changeChannel": "チャンネル変更",
   "components.chat.changeToDefaultChannel": "デフォルトに変更する",
   "components.chat.channelAsDefault": "デフォルト（{channelName}）",
+  "components.puzzle.createdAt": "出題時間",
+  "components.puzzle.genre_classic": "ウミガメのスープ",
+  "components.puzzle.genre_littleAlbat": "亀夫君問題",
+  "components.puzzle.genre_others": "新＆形式",
+  "components.puzzle.genre_twentyQuestions": "２０の扉",
+  "components.puzzle.lastupdate": "最後回答時間",
+  "components.puzzle.solvedAt": "解決時間",
+  "components.puzzle.status_dazed": "迷宮入り",
+  "components.puzzle.status_forbidden": "強制非公開",
+  "components.puzzle.status_hidden": "非公開",
+  "components.puzzle.status_solved": "解決済み",
+  "components.puzzle.status_undergoing": "未解決",
+  "components.puzzle.yami_longtermYami": "闇＆常駐",
+  "components.puzzle.yami_yami": "闇スープ",
   "components.user.anonymousUser": "謎の料理人",
   "home.bestPuzzleOfLastMonth": "先月スター数獲得上位問題",
   "home.body": "Cindy は水平思考パズル「ウミガメのスープ」のリアルタイム出題サイト。\nウミガメのスープは複数ユーザーでプレイする水平思考型推理ゲームです。\nYES/NOで答えることのできる質問をして不可解な謎を一緒に解き明かして行きましょう。",
@@ -23,6 +37,9 @@
   "puzzle.header": "問題一覧",
   "puzzle.newPuzzle": "出題",
   "puzzle.title": "問題一覧：数多の水平思考パズルがあなたを待っています！",
+  "ranking.description": "",
+  "ranking.header": "",
+  "ranking.title": "",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
   "toolbar.wiki": "Cindy+Wiki"
