--- a/lang/ja.json
+++ b/lang/ja.json
@@ -3,11 +3,12 @@
   "auth.logout": "ログアウト",
   "auth.nickname": "ニックネーム",
   "auth.password": "パスワード",
-  "auth.signup": "サインアップ",
+  "auth.signup": "登録する",
   "auth.username": "ユーザー名",
   "common.change": "変更",
   "common.close": "閉じる",
   "common.default": "デフォルト",
+  "common.loading": "ロード中です・・・",
   "components.chat.changeChannel": "チャンネル変更",
   "components.chat.changeToDefaultChannel": "デフォルトに変更する",
   "components.chat.channelAsDefault": "デフォルト（{channelName}）",
