--- a/lang/ja.json
+++ b/lang/ja.json
@@ -41,6 +41,8 @@
   "ranking.description": "",
   "ranking.header": "",
   "ranking.title": "",
+  "replay.description": "",
+  "replay.title": "",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
   "toolbar.wiki": "Cindy+Wiki"
