Add event-based subscriptions

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -3,7 +3,7 @@
   "auth.logout": "ログアウト",
   "auth.nickname": "ニックネーム",
   "auth.password": "パスワード",
-  "auth.signup": "登録する",
+  "auth.signup": "登録",
   "auth.username": "ユーザー名",
   "common.change": "変更",
   "common.close": "閉じる",
