--- a/lang/en.json
+++ b/lang/en.json
@@ -5,6 +5,7 @@
   "auth.password": "Password",
   "auth.signup": "Signup",
   "auth.username": "Username",
+  "common.apply": "Apply",
   "common.change": "Change",
   "common.close": "Close",
   "common.default": "Default",
@@ -33,11 +34,14 @@
   "home.header": "Welcome to {cindy}!",
   "home.start": "Start",
   "home.title": "Cindy: A lateral thinking salon for every one!",
-  "puzzle.all": "All",
+  "puzzle.creator": "Creator",
   "puzzle.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
-  "puzzle.header": "Puzzle List",
-  "puzzle.newPuzzle": "New puzzle",
+  "puzzle.solveit": "Can you solve the puzzle?",
   "puzzle.title": "Puzzles",
+  "puzzles.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
+  "puzzles.header": "Puzzle List",
+  "puzzles.newPuzzle": "New puzzle",
+  "puzzles.title": "Puzzles",
   "ranking.description": "Ranking board for users",
   "ranking.header": "Ranking",
   "ranking.title": "Ranking",
@@ -45,5 +49,10 @@
   "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
-  "toolbar.wiki": "Wiki"
+  "toolbar.wiki": "Wiki",
+  "workbench.keywords": "Keywords",
+  "workbench.mergePanel": "Merge Keywords",
+  "workbench.minKeywordAppearance": "Min appearance",
+  "workbench.renamePanel": "Rename Keywords",
+  "workbench.selectPanel": "Select Keywords"
 }
