--- a/lang/ja.json
+++ b/lang/ja.json
@@ -5,6 +5,7 @@
   "auth.password": "パスワード",
   "auth.signup": "登録",
   "auth.username": "ユーザー名",
+  "common.apply": "適用",
   "common.change": "変更",
   "common.close": "閉じる",
   "common.default": "デフォルト",
@@ -33,17 +34,25 @@
   "home.header": "{cindy} へようこそ！",
   "home.start": "ゲームスタート",
   "home.title": "みんなで遊ぶ水平思考ゲーム「ウミガメのスープ」",
-  "puzzle.all": "",
-  "puzzle.description": "遊びたいパズルを選ぼう。以前出題された問題を閲覧しよう。数多の水平思考パズルがあなたを待っています！",
-  "puzzle.header": "問題一覧",
-  "puzzle.newPuzzle": "出題",
-  "puzzle.title": "問題一覧：数多の水平思考パズルがあなたを待っています！",
+  "puzzle.creator": "出題者",
+  "puzzle.description": "問題の詳細情報",
+  "puzzle.solveit": "この謎、解けますか？",
+  "puzzle.title": "問題ページ",
+  "puzzles.description": "遊びたいパズルを選ぼう。以前出題された問題を閲覧しよう。数多の水平思考パズルがあなたを待っています！",
+  "puzzles.header": "問題一覧",
+  "puzzles.newPuzzle": "出題",
+  "puzzles.title": "問題一覧：数多の水平思考パズルがあなたを待っています！",
   "ranking.description": "",
   "ranking.header": "",
   "ranking.title": "",
-  "replay.description": "",
-  "replay.title": "",
+  "replay.description": "古い名作をリプレイしましょう",
+  "replay.title": "問題リプレイ",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
-  "toolbar.wiki": "Cindy+Wiki"
+  "toolbar.wiki": "Cindy+Wiki",
+  "workbench.keywords": "",
+  "workbench.mergePanel": "",
+  "workbench.minKeywordAppearance": "",
+  "workbench.renamePanel": "",
+  "workbench.selectPanel": ""
 }
