Implement basic puzzle page

--- a/lang/en.json
+++ b/lang/en.json
@@ -9,6 +9,7 @@
   "common.change": "Change",
   "common.close": "Close",
   "common.default": "Default",
+  "common.editTimes": "[Edited ({count})]",
   "common.loading": "Loading...",
   "components.chat.changeChannel": "Change Channel",
   "components.chat.changeToDefaultChannel": "Change To Default Channel",
@@ -36,8 +37,12 @@
   "home.title": "Cindy: A lateral thinking salon for every one!",
   "puzzle.creator": "Creator",
   "puzzle.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
+  "puzzle.forbiddenContents": "This puzzle has violated rules in Cindy and is forbidden by administrator.",
+  "puzzle.hiddenContents": "This puzzle is not open to public access.",
+  "puzzle.putQuestion": "Ask",
   "puzzle.solveit": "Can you solve the puzzle?",
   "puzzle.title": "Puzzles",
+  "puzzle.waitForAnswer": "Wait for answer...",
   "puzzles.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
   "puzzles.header": "Puzzle List",
   "puzzles.newPuzzle": "New puzzle",
