--- a/lang/ja.json
+++ b/lang/ja.json
@@ -9,6 +9,7 @@
   "common.change": "変更",
   "common.close": "閉じる",
   "common.default": "デフォルト",
+  "common.editTimes": "",
   "common.loading": "ロード中です・・・",
   "components.chat.changeChannel": "チャンネル変更",
   "components.chat.changeToDefaultChannel": "デフォルトに変更する",
@@ -36,8 +37,12 @@
   "home.title": "みんなで遊ぶ水平思考ゲーム「ウミガメのスープ」",
   "puzzle.creator": "出題者",
   "puzzle.description": "問題の詳細情報",
+  "puzzle.forbiddenContents": "",
+  "puzzle.hiddenContents": "",
+  "puzzle.putQuestion": "",
   "puzzle.solveit": "この謎、解けますか？",
   "puzzle.title": "問題ページ",
+  "puzzle.waitForAnswer": "",
   "puzzles.description": "遊びたいパズルを選ぼう。以前出題された問題を閲覧しよう。数多の水平思考パズルがあなたを待っています！",
   "puzzles.header": "問題一覧",
   "puzzles.newPuzzle": "出題",
