Add Buttons to bottom in puzzle page

--- a/lang/en.json
+++ b/lang/en.json
@@ -14,13 +14,17 @@
   "components.chat.changeChannel": "Change Channel",
   "components.chat.changeToDefaultChannel": "Change To Default Channel",
   "components.chat.channelAsDefault": "Default ({channelName})",
+  "components.puzzle.bookmark": "Bookmark",
+  "components.puzzle.comment": "Comment",
   "components.puzzle.createdAt": "Created At",
   "components.puzzle.genre_classic": "Classic",
   "components.puzzle.genre_littleAlbat": "Little Albat",
   "components.puzzle.genre_others": "Others",
   "components.puzzle.genre_twentyQuestions": "Twenty Questions",
   "components.puzzle.lastupdate": "Last Update",
+  "components.puzzle.replay": "Replay",
   "components.puzzle.solvedAt": "Solved At",
+  "components.puzzle.star": "Star",
   "components.puzzle.status_dazed": "dazed",
   "components.puzzle.status_forbidden": "forbidden",
   "components.puzzle.status_hidden": "hidden",
