--- a/lang/ja.json
+++ b/lang/ja.json
@@ -9,18 +9,22 @@
   "common.change": "変更",
   "common.close": "閉じる",
   "common.default": "デフォルト",
-  "common.editTimes": "",
+  "common.editTimes": "編集済み",
   "common.loading": "ロード中です・・・",
   "components.chat.changeChannel": "チャンネル変更",
   "components.chat.changeToDefaultChannel": "デフォルトに変更する",
   "components.chat.channelAsDefault": "デフォルト（{channelName}）",
+  "components.puzzle.bookmark": "ブクマ",
+  "components.puzzle.comment": "コメント",
   "components.puzzle.createdAt": "出題時間",
   "components.puzzle.genre_classic": "ウミガメのスープ",
   "components.puzzle.genre_littleAlbat": "亀夫君問題",
   "components.puzzle.genre_others": "新＆形式",
   "components.puzzle.genre_twentyQuestions": "２０の扉",
   "components.puzzle.lastupdate": "最終回答時間",
+  "components.puzzle.replay": "リプレイ（仮）",
   "components.puzzle.solvedAt": "解決時間",
+  "components.puzzle.star": "スター",
   "components.puzzle.status_dazed": "迷宮入り",
   "components.puzzle.status_forbidden": "強制非公開",
   "components.puzzle.status_hidden": "非公開",
@@ -37,12 +41,12 @@
   "home.title": "みんなで遊ぶ水平思考ゲーム「ウミガメのスープ」",
   "puzzle.creator": "出題者",
   "puzzle.description": "問題の詳細情報",
-  "puzzle.forbiddenContents": "",
-  "puzzle.hiddenContents": "",
-  "puzzle.putQuestion": "",
+  "puzzle.forbiddenContents": "この問題は Cindy のルールを違反しています。管理人によって閉鎖されました。",
+  "puzzle.hiddenContents": "この問題は非公開設定されています。この問題の内容を閲覧することはできません。",
+  "puzzle.putQuestion": "質問",
   "puzzle.solveit": "この謎、解けますか？",
   "puzzle.title": "問題ページ",
-  "puzzle.waitForAnswer": "",
+  "puzzle.waitForAnswer": "回答はまだです・・・",
   "puzzles.description": "遊びたいパズルを選ぼう。以前出題された問題を閲覧しよう。数多の水平思考パズルがあなたを待っています！",
   "puzzles.header": "問題一覧",
   "puzzles.newPuzzle": "出題",
