Plenty of rewriting work
- Rewrite most components with typescript
- Add apollo config to extract graphql schema to typescript
- Make trigger based subscription server schema consistent with hasura
- Rename graphql operation names to prevent collision with their types
- Remove tslint, use tsserver for linting
- Add missing translation files

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -1,4 +1,8 @@
 {
+  "add_puzzle.description": "問題を作ろう！",
+  "add_puzzle.header": "出題画面",
+  "add_puzzle.publishPuzzle": "出題",
+  "add_puzzle.title": "出題ページ",
   "auth.login": "ログイン",
   "auth.logout": "ログアウト",
   "auth.nickname": "ニックネーム",
@@ -11,18 +15,27 @@
   "common.default": "デフォルト",
   "common.editTimes": "編集済み({count})",
   "common.loading": "ロード中です・・・",
+  "common.none": "なし",
   "components.chat.changeChannel": "チャンネル変更",
   "components.chat.changeToDefaultChannel": "デフォルトに変更する",
   "components.chat.channelAsDefault": "デフォルト（{channelName}）",
+  "components.puzzle.anonymous": "匿名",
   "components.puzzle.bookmark": "ブクマ",
   "components.puzzle.comment": "コメント",
+  "components.puzzle.content": "問題文",
   "components.puzzle.createdAt": "出題時間",
+  "components.puzzle.dazedOn": "迷宮入り時間",
+  "components.puzzle.dialogue_good": "良質",
+  "components.puzzle.dialogue_true": "正解",
+  "components.puzzle.genre": "ジャンル",
   "components.puzzle.genre_classic": "ウミガメのスープ",
   "components.puzzle.genre_littleAlbat": "亀夫君問題",
   "components.puzzle.genre_others": "新＆形式",
   "components.puzzle.genre_twentyQuestions": "２０の扉",
+  "components.puzzle.grotesque": "グロあり",
   "components.puzzle.lastupdate": "最終回答時間",
   "components.puzzle.replay": "リプレイ（仮）",
+  "components.puzzle.solution": "解説文",
   "components.puzzle.solvedAt": "解決時間",
   "components.puzzle.star": "スター",
   "components.puzzle.status_dazed": "迷宮入り",
@@ -30,6 +43,8 @@
   "components.puzzle.status_hidden": "非公開",
   "components.puzzle.status_solved": "解決済み",
   "components.puzzle.status_undergoing": "未解決",
+  "components.puzzle.title": "タイトル",
+  "components.puzzle.yami": "闇スープ",
   "components.puzzle.yami_longtermYami": "闇＆常駐",
   "components.puzzle.yami_yami": "闇スープ",
   "components.user.anonymousUser": "謎の料理人",
@@ -56,6 +71,9 @@
   "ranking.title": "",
   "replay.description": "古い名作をリプレイしましょう",
   "replay.title": "問題リプレイ",
+  "stamp.namespace_chef": "シェフ",
+  "stamp.namespace_kameo": "カメオ",
+  "stamp.namespace_puzzle": "問題パネル",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
   "toolbar.wiki": "Cindy+Wiki",
