--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,8 @@
 {
+  "add_puzzle.description": "Create puzzles in Cindy!",
+  "add_puzzle.header": "Create Puzzle",
+  "add_puzzle.publishPuzzle": "Publish this puzzle",
+  "add_puzzle.title": "Puzzle Create Page",
   "auth.login": "Login",
   "auth.logout": "Logout",
   "auth.nickname": "Nickname",
@@ -11,18 +15,27 @@
   "common.default": "Default",
   "common.editTimes": "[Edited ({count})]",
   "common.loading": "Loading...",
+  "common.none": "None",
   "components.chat.changeChannel": "Change Channel",
   "components.chat.changeToDefaultChannel": "Change To Default Channel",
   "components.chat.channelAsDefault": "Default ({channelName})",
+  "components.puzzle.anonymous": "Anonymous",
   "components.puzzle.bookmark": "Bookmark",
   "components.puzzle.comment": "Comment",
+  "components.puzzle.content": "Content",
   "components.puzzle.createdAt": "Created At",
+  "components.puzzle.dazedOn": "Dazed On",
+  "components.puzzle.dialogue_good": "Good Question",
+  "components.puzzle.dialogue_true": "True Answer",
+  "components.puzzle.genre": "Genre",
   "components.puzzle.genre_classic": "Classic",
   "components.puzzle.genre_littleAlbat": "Little Albat",
   "components.puzzle.genre_others": "Others",
   "components.puzzle.genre_twentyQuestions": "Twenty Questions",
+  "components.puzzle.grotesque": "Grotesque",
   "components.puzzle.lastupdate": "Last Update",
   "components.puzzle.replay": "Replay",
+  "components.puzzle.solution": "Solution",
   "components.puzzle.solvedAt": "Solved At",
   "components.puzzle.star": "Star",
   "components.puzzle.status_dazed": "dazed",
@@ -30,6 +43,8 @@
   "components.puzzle.status_hidden": "hidden",
   "components.puzzle.status_solved": "solved",
   "components.puzzle.status_undergoing": "undergoing",
+  "components.puzzle.title": "Title",
+  "components.puzzle.yami": "Yami",
   "components.puzzle.yami_longtermYami": "Long-term Yami",
   "components.puzzle.yami_yami": "Yami",
   "components.user.anonymousUser": "Anonymous User",
@@ -56,6 +71,9 @@
   "ranking.title": "Ranking",
   "replay.description": "Replay Puzzle {puzzleTitle} in Cindy",
   "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
+  "stamp.namespace_chef": "Chef",
+  "stamp.namespace_kameo": "Kameo",
+  "stamp.namespace_puzzle": "Puzzle",
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
   "toolbar.wiki": "Wiki",
