Complete user filtering for puzzle

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,9 +16,11 @@
   "common.editTimes": "[Edited ({count})]",
   "common.loading": "Loading...",
   "common.none": "None",
+  "common.notExist": "Page Not Exists",
   "components.chat.changeChannel": "Change Channel",
   "components.chat.changeToDefaultChannel": "Change To Default Channel",
   "components.chat.channelAsDefault": "Default ({channelName})",
+  "components.chat.notExistDescription": "This chatroom does not exist!",
   "components.puzzle.anonymous": "Anonymous",
   "components.puzzle.bookmark": "Bookmark",
   "components.puzzle.comment": "Comment",
@@ -58,6 +60,7 @@
   "puzzle.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
   "puzzle.forbiddenContents": "This puzzle has violated rules in Cindy and is forbidden by administrator.",
   "puzzle.hiddenContents": "This puzzle is not open to public access.",
+  "puzzle.notExistDescription": "This puzzle does not exist!",
   "puzzle.putQuestion": "Ask",
   "puzzle.solveit": "Can you solve the puzzle?",
   "puzzle.title": "Puzzles",
