--- a/lang/ja.json
+++ b/lang/ja.json
@@ -16,9 +16,11 @@
   "common.editTimes": "編集済み({count})",
   "common.loading": "ロード中です・・・",
   "common.none": "なし",
+  "common.notExist": "このページは存在しません",
   "components.chat.changeChannel": "チャンネル変更",
   "components.chat.changeToDefaultChannel": "デフォルトに変更する",
   "components.chat.channelAsDefault": "デフォルト（{channelName}）",
+  "components.chat.notExistDescription": "このチャットルームは存在しません",
   "components.puzzle.anonymous": "匿名",
   "components.puzzle.bookmark": "ブクマ",
   "components.puzzle.comment": "コメント",
@@ -58,6 +60,7 @@
   "puzzle.description": "問題の詳細情報",
   "puzzle.forbiddenContents": "この問題は Cindy のルールを違反しています。管理人によって閉鎖されました。",
   "puzzle.hiddenContents": "この問題は非公開設定されています。この問題の内容を閲覧することはできません。",
+  "puzzle.notExistDescription": "この問題は存在しません",
   "puzzle.putQuestion": "質問",
   "puzzle.solveit": "この謎、解けますか？",
   "puzzle.title": "問題ページ",
