Add hint, with many minor fixes.
- Add hint to control panel
- Add add all to user filter in puzzle detail
- Fix errors in control panel and mutations

--- a/lang/en.json
+++ b/lang/en.json
@@ -9,6 +9,7 @@
   "auth.password": "Password",
   "auth.signup": "Signup",
   "auth.username": "Username",
+  "common.all": "All",
   "common.apply": "Apply",
   "common.change": "Change",
   "common.close": "Close",
@@ -29,13 +30,16 @@
   "components.puzzle.dazedOn": "Dazed On",
   "components.puzzle.dialogue_good": "Good Question",
   "components.puzzle.dialogue_true": "True Answer",
+  "components.puzzle.general": "General",
   "components.puzzle.genre": "Genre",
   "components.puzzle.genre_classic": "Classic",
   "components.puzzle.genre_littleAlbat": "Little Albat",
   "components.puzzle.genre_others": "Others",
   "components.puzzle.genre_twentyQuestions": "Twenty Questions",
   "components.puzzle.grotesque": "Grotesque",
+  "components.puzzle.hint": "Hint",
   "components.puzzle.lastupdate": "Last Update",
+  "components.puzzle.memo": "Memo",
   "components.puzzle.replay": "Replay",
   "components.puzzle.solution": "Solution",
   "components.puzzle.solvedAt": "Solved At",
@@ -62,6 +66,8 @@
   "puzzle.hiddenContents": "This puzzle is not open to public access.",
   "puzzle.notExistDescription": "This puzzle does not exist!",
   "puzzle.putQuestion": "Ask",
+  "puzzle.putSolution": "Put Solution",
+  "puzzle.setHidden": "Set As Hidden",
   "puzzle.solveit": "Can you solve the puzzle?",
   "puzzle.title": "Puzzles",
   "puzzle.waitForAnswer": "Wait for answer...",
