--- a/lang/ja.json
+++ b/lang/ja.json
@@ -9,6 +9,7 @@
   "auth.password": "パスワード",
   "auth.signup": "登録",
   "auth.username": "ユーザー名",
+  "common.all": "",
   "common.apply": "適用",
   "common.change": "変更",
   "common.close": "閉じる",
@@ -29,13 +30,16 @@
   "components.puzzle.dazedOn": "迷宮入り時間",
   "components.puzzle.dialogue_good": "良質",
   "components.puzzle.dialogue_true": "正解",
+  "components.puzzle.general": "",
   "components.puzzle.genre": "ジャンル",
   "components.puzzle.genre_classic": "ウミガメのスープ",
   "components.puzzle.genre_littleAlbat": "亀夫君問題",
   "components.puzzle.genre_others": "新＆形式",
   "components.puzzle.genre_twentyQuestions": "２０の扉",
   "components.puzzle.grotesque": "グロあり",
+  "components.puzzle.hint": "",
   "components.puzzle.lastupdate": "最終回答時間",
+  "components.puzzle.memo": "",
   "components.puzzle.replay": "リプレイ（仮）",
   "components.puzzle.solution": "解説文",
   "components.puzzle.solvedAt": "解決時間",
@@ -62,6 +66,8 @@
   "puzzle.hiddenContents": "この問題は非公開設定されています。この問題の内容を閲覧することはできません。",
   "puzzle.notExistDescription": "この問題は存在しません",
   "puzzle.putQuestion": "質問",
+  "puzzle.putSolution": "",
+  "puzzle.setHidden": "",
   "puzzle.solveit": "この謎、解けますか？",
   "puzzle.title": "問題ページ",
   "puzzle.waitForAnswer": "回答はまだです・・・",
