Rewrite add replay workbenches in typescript

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,6 +3,9 @@
   "add_puzzle.header": "Create Puzzle",
   "add_puzzle.publishPuzzle": "Publish this puzzle",
   "add_puzzle.title": "Puzzle Create Page",
+  "add_replay.description": "Create replay from puzzle in Cindy!",
+  "add_replay.header": "Create Replay",
+  "add_replay.title": "Replay Create Page",
   "auth.login": "Login",
   "auth.logout": "Logout",
   "auth.nickname": "Nickname",
@@ -86,6 +89,7 @@
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
   "toolbar.wiki": "Wiki",
+  "workbench.firstLoadingIsTimeConsuming": "Now Loading text parsing tools, it may consume several minites for the first time...",
   "workbench.keywords": "Keywords",
   "workbench.mergePanel": "Merge Keywords",
   "workbench.minKeywordAppearance": "Min appearance",
