--- a/lang/ja.json
+++ b/lang/ja.json
@@ -3,6 +3,9 @@
   "add_puzzle.header": "出題画面",
   "add_puzzle.publishPuzzle": "出題",
   "add_puzzle.title": "出題ページ",
+  "add_replay.description": "問題のリプレイを作ろう！",
+  "add_replay.header": "リプレイ作成ページ",
+  "add_replay.title": "リプレイ作成ページ",
   "auth.login": "ログイン",
   "auth.logout": "ログアウト",
   "auth.nickname": "ニックネーム",
@@ -86,9 +89,10 @@
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
   "toolbar.wiki": "Cindy+Wiki",
-  "workbench.keywords": "",
-  "workbench.mergePanel": "",
-  "workbench.minKeywordAppearance": "",
-  "workbench.renamePanel": "",
-  "workbench.selectPanel": ""
+  "workbench.firstLoadingIsTimeConsuming": "文字解析用ツールをロードしています・・・初回ロードはネット状況によって数分かかります・・・",
+  "workbench.keywords": "キーワード",
+  "workbench.mergePanel": "キーワード合併パネル",
+  "workbench.minKeywordAppearance": "最低キーワード出現数",
+  "workbench.renamePanel": "キーワード編集パネル",
+  "workbench.selectPanel": "キーワード選出パネル"
 }
