Add new question indicator, fix question input update

--- a/lang/en.json
+++ b/lang/en.json
@@ -40,6 +40,7 @@
   "components.puzzle.genre_others": "Others",
   "components.puzzle.genre_twentyQuestions": "Twenty Questions",
   "components.puzzle.grotesque": "Grotesque",
+  "components.puzzle.haveQuestionsToBeAnswered": "New Question",
   "components.puzzle.hint": "Hint",
   "components.puzzle.lastupdate": "Last Update",
   "components.puzzle.memo": "Memo",
