--- a/lang/ja.json
+++ b/lang/ja.json
@@ -40,6 +40,7 @@
   "components.puzzle.genre_others": "新＆形式",
   "components.puzzle.genre_twentyQuestions": "２０の扉",
   "components.puzzle.grotesque": "グロあり",
+  "components.puzzle.haveQuestionsToBeAnswered": "新質問あり！",
   "components.puzzle.hint": "ヒント",
   "components.puzzle.lastupdate": "最終回答時間",
   "components.puzzle.memo": "メモ",
