Add memo frame to puzzle page

--- a/lang/en.json
+++ b/lang/en.json
@@ -42,6 +42,7 @@
   "components.puzzle.grotesque": "Grotesque",
   "components.puzzle.haveQuestionsToBeAnswered": "New Question",
   "components.puzzle.hint": "Hint",
+  "components.puzzle.hintOnly": "{user} only",
   "components.puzzle.lastupdate": "Last Update",
   "components.puzzle.memo": "Memo",
   "components.puzzle.replay": "Replay",
@@ -68,6 +69,7 @@
   "puzzle.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
   "puzzle.forbiddenContents": "This puzzle has violated rules in Cindy and is forbidden by administrator.",
   "puzzle.hiddenContents": "This puzzle is not open to public access.",
+  "puzzle.memoFromCreator": "Memo from creator",
   "puzzle.notExistDescription": "This puzzle does not exist!",
   "puzzle.putQuestion": "Ask",
   "puzzle.putSolution": "Put Solution",
