--- a/lang/ja.json
+++ b/lang/ja.json
@@ -42,6 +42,7 @@
   "components.puzzle.grotesque": "グロあり",
   "components.puzzle.haveQuestionsToBeAnswered": "新質問あり！",
   "components.puzzle.hint": "ヒント",
+  "components.puzzle.hintOnly": "{user} 宛",
   "components.puzzle.lastupdate": "最終回答時間",
   "components.puzzle.memo": "メモ",
   "components.puzzle.replay": "リプレイ（仮）",
@@ -68,6 +69,7 @@
   "puzzle.description": "問題の詳細情報",
   "puzzle.forbiddenContents": "この問題は Cindy のルールを違反しています。管理人によって閉鎖されました。",
   "puzzle.hiddenContents": "この問題は非公開設定されています。この問題の内容を閲覧することはできません。",
+  "puzzle.memoFromCreator": "出題者からのメモ",
   "puzzle.notExistDescription": "この問題は存在しません",
   "puzzle.putQuestion": "質問",
   "puzzle.putSolution": "解説を出す",
