Add puzzle showcase to homepage

--- a/lang/en.json
+++ b/lang/en.json
@@ -86,6 +86,13 @@
   "ranking.title": "Ranking",
   "replay.description": "Replay Puzzle {puzzleTitle} in Cindy",
   "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
+  "showcases.puzzle.a1": "Yes!",
+  "showcases.puzzle.a2": "No",
+  "showcases.puzzle.content": "Rubbers are usually used to clear texts, while A take the rubber with the intention to write texts.\n\nWhy?",
+  "showcases.puzzle.goToSolution": "View Answer",
+  "showcases.puzzle.q1": "Is the rubber white?",
+  "showcases.puzzle.q2": "Does friction count?",
+  "showcases.puzzle.title": "White over white",
   "stamp.namespace_chef": "Chef",
   "stamp.namespace_kameo": "Kameo",
   "stamp.namespace_puzzle": "Puzzle",
