--- a/lang/ja.json
+++ b/lang/ja.json
@@ -86,6 +86,13 @@
   "ranking.title": "",
   "replay.description": "古い名作をリプレイしましょう",
   "replay.title": "問題リプレイ",
+  "showcases.puzzle.a1": "YES　ですが、何色でも成立します。でも白色で考えてください！",
+  "showcases.puzzle.a2": "NO",
+  "showcases.puzzle.content": "消しゴムといえば、書いた文字を消すための文房具であることは言うまでもないことだ。\n\nだがAは、“まだ何も書かれていない白紙にメッセージを残すため”、消しゴムを手に持った。\n\n一体なぜ？",
+  "showcases.puzzle.goToSolution": "解説を見る",
+  "showcases.puzzle.q1": "消しゴムは白色ですか？",
+  "showcases.puzzle.q2": "摩擦熱は重要ですか？",
+  "showcases.puzzle.title": "白に白",
   "stamp.namespace_chef": "シェフ",
   "stamp.namespace_kameo": "カメオ",
   "stamp.namespace_puzzle": "問題パネル",
