add puzzle to ranking

--- a/lang/en.json
+++ b/lang/en.json
@@ -18,6 +18,7 @@
   "common.close": "Close",
   "common.default": "Default",
   "common.editTimes": "[Edited ({count})]",
+  "common.loadMore": "Load More",
   "common.loading": "Loading...",
   "common.none": "None",
   "common.notExist": "Page Not Exists",
@@ -83,6 +84,8 @@
   "puzzles.title": "Puzzles",
   "ranking.description": "Ranking board for users",
   "ranking.header": "Ranking",
+  "ranking.puzzleStarRanking": "Puzzles with most stars in {date}",
+  "ranking.rank": "Rank {rank}",
   "ranking.title": "Ranking",
   "replay.description": "Replay Puzzle {puzzleTitle} in Cindy",
   "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
