--- a/lang/ja.json
+++ b/lang/ja.json
@@ -18,6 +18,7 @@
   "common.close": "閉じる",
   "common.default": "デフォルト",
   "common.editTimes": "編集済み({count})",
+  "common.loadMore": "もっと見る",
   "common.loading": "ロード中です・・・",
   "common.none": "なし",
   "common.notExist": "このページは存在しません",
@@ -81,9 +82,11 @@
   "puzzles.header": "問題一覧",
   "puzzles.newPuzzle": "出題",
   "puzzles.title": "問題一覧：数多の水平思考パズルがあなたを待っています！",
-  "ranking.description": "",
-  "ranking.header": "",
-  "ranking.title": "",
+  "ranking.description": "週間ランキング・月間ランキング",
+  "ranking.header": "ランキング",
+  "ranking.puzzleStarRanking": "{date}の最も評価された問題",
+  "ranking.rank": "{rank} 位",
+  "ranking.title": "ランキング",
   "replay.description": "古い名作をリプレイしましょう",
   "replay.title": "問題リプレイ",
   "showcases.puzzle.a1": "YES　ですが、何色でも成立します。でも白色で考えてください！",
