Add ranking pages

--- a/lang/en.json
+++ b/lang/en.json
@@ -14,6 +14,7 @@
   "auth.username": "Username",
   "common.all": "All",
   "common.apply": "Apply",
+  "common.back": "<< Back",
   "common.change": "Change",
   "common.close": "Close",
   "common.default": "Default",
@@ -84,9 +85,13 @@
   "puzzles.title": "Puzzles",
   "ranking.description": "Ranking board for users",
   "ranking.header": "Ranking",
-  "ranking.puzzleStarRanking": "Puzzles with most stars in {date}",
+  "ranking.puzzleStarRanking": "Puzzle Ranking by Stars",
+  "ranking.puzzleStarRankingWithMonth": "Puzzles with most stars in {date}",
   "ranking.rank": "Rank {rank}",
   "ranking.title": "Ranking",
+  "ranking.userDialogueRanking": "User Ranking by Questions",
+  "ranking.userDialogueRankingWithMonth": "Users with most questions in {date}",
+  "ranking.userPuzzleRanking": "User Ranking by Puzzles",
   "replay.description": "Replay Puzzle {puzzleTitle} in Cindy",
   "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
   "showcases.puzzle.a1": "Yes!",
