--- a/lang/ja.json
+++ b/lang/ja.json
@@ -14,6 +14,7 @@
   "auth.username": "ユーザー名",
   "common.all": "すべて",
   "common.apply": "適用",
+  "common.back": "＜戻る",
   "common.change": "変更",
   "common.close": "閉じる",
   "common.default": "デフォルト",
@@ -84,9 +85,13 @@
   "puzzles.title": "問題一覧：数多の水平思考パズルがあなたを待っています！",
   "ranking.description": "週間ランキング・月間ランキング",
   "ranking.header": "ランキング",
-  "ranking.puzzleStarRanking": "{date}の最も評価された問題",
+  "ranking.puzzleStarRanking": "問題スター数ランキング",
+  "ranking.puzzleStarRankingWithMonth": "{date}の最も評価された問題",
   "ranking.rank": "{rank} 位",
   "ranking.title": "ランキング",
+  "ranking.userDialogueRanking": "ユーザー質問数ランキング",
+  "ranking.userDialogueRankingWithMonth": "{date}の間最も質問したユーザー",
+  "ranking.userPuzzleRanking": "ユーザー出題数ランキング",
   "replay.description": "古い名作をリプレイしましょう",
   "replay.title": "問題リプレイ",
   "showcases.puzzle.a1": "YES　ですが、何色でも成立します。でも白色で考えてください！",
