Add notificatons to ranking; add puzzle ranking for user

--- a/lang/en.json
+++ b/lang/en.json
@@ -88,6 +88,7 @@
   "puzzles.title": "Puzzles",
   "ranking.description": "Ranking board for users",
   "ranking.header": "Ranking",
+  "ranking.monthlyRanking": "Monthly Ranking",
   "ranking.puzzleStarRanking": "Puzzle Ranking by Stars",
   "ranking.puzzleStarRankingWithMonth": "Puzzles with most stars in {date}",
   "ranking.rank": "Rank {rank}",
@@ -95,6 +96,8 @@
   "ranking.userDialogueRanking": "User Ranking by Questions",
   "ranking.userDialogueRankingWithMonth": "Users with most questions in {date}",
   "ranking.userPuzzleRanking": "User Ranking by Puzzles",
+  "ranking.userPuzzleRankingWithMonth": "Users with most puzzles in {date}",
+  "ranking.weeklyRanking": "Weekly Ranking",
   "replay.description": "Replay Puzzle {puzzleTitle} in Cindy",
   "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
   "showcases.puzzle.a1": "Yes!",
