--- a/lang/ja.json
+++ b/lang/ja.json
@@ -88,6 +88,7 @@
   "puzzles.title": "問題一覧：数多の水平思考パズルがあなたを待っています！",
   "ranking.description": "週間ランキング・月間ランキング",
   "ranking.header": "ランキング",
+  "ranking.monthlyRanking": "月間ランキング",
   "ranking.puzzleStarRanking": "問題スター数ランキング",
   "ranking.puzzleStarRankingWithMonth": "{date}の最も評価された問題",
   "ranking.rank": "{rank} 位",
@@ -95,6 +96,8 @@
   "ranking.userDialogueRanking": "ユーザー質問数ランキング",
   "ranking.userDialogueRankingWithMonth": "{date}の間最も質問したユーザー",
   "ranking.userPuzzleRanking": "ユーザー出題数ランキング",
+  "ranking.userPuzzleRankingWithMonth": "{date}の間最も出題したユーザー",
+  "ranking.weeklyRanking": "週間ランキング",
   "replay.description": "古い名作をリプレイしましょう",
   "replay.title": "問題リプレイ",
   "showcases.puzzle.a1": "YES　ですが、何色でも成立します。でも白色で考えてください！",
