--- a/lang/en.json
+++ b/lang/en.json
@@ -64,6 +64,16 @@
   "components.puzzle.yami_longtermYami": "Long-term Yami",
   "components.puzzle.yami_yami": "Yami",
   "components.user.anonymousUser": "Anonymous User",
+  "components.user.commentCount": "Comments",
+  "components.user.dialogueCount": "Dialogues",
+  "components.user.goodQuestionCount": "Good Questions",
+  "components.user.profile": "Profile",
+  "components.user.puzzleCount": "Puzzles",
+  "components.user.recvCommentCount": "Comments Received",
+  "components.user.recvStarCount": "Stars Received",
+  "components.user.starCount": "Stars",
+  "components.user.trueAnswerCount": "True Answers",
+  "components.user.useraward": "Award",
   "home.bestPuzzleOfLastMonth": "Most Valuable Puzzles of the Last Month",
   "home.body": "Cindy is an active community for chatting lateral thinking problems.",
   "home.description": "Find interesting lateral thinking puzzles here, share with your friends, and even create your own lateral thinking puzzle in minites!",
@@ -113,6 +123,11 @@
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
   "toolbar.wiki": "Wiki",
+  "user.currentUserProfileIsEmpty": "It seems that you haven't written a profile yet. Introduce your self in a few words now!",
+  "user.description": "User Profile in Cindy",
+  "user.profileIsEmpty": "This user does not have a profile",
+  "user.profileOf": "{nickname}'s Profile",
+  "user.title": "User Profile",
   "workbench.firstLoadingIsTimeConsuming": "Now Loading text parsing tools, it may consume several minites for the first time...",
   "workbench.keywords": "Keywords",
   "workbench.mergePanel": "Merge Keywords",
