--- a/lang/ja.json
+++ b/lang/ja.json
@@ -64,6 +64,16 @@
   "components.puzzle.yami_longtermYami": "闇＆常駐",
   "components.puzzle.yami_yami": "闇スープ",
   "components.user.anonymousUser": "謎の料理人",
+  "components.user.commentCount": "コメント数",
+  "components.user.dialogueCount": "質問数",
+  "components.user.goodQuestionCount": "良い質問数",
+  "components.user.profile": "プロフィール",
+  "components.user.puzzleCount": "出題数",
+  "components.user.recvCommentCount": "コメント獲得数",
+  "components.user.recvStarCount": "スター獲得数",
+  "components.user.starCount": "スター数",
+  "components.user.trueAnswerCount": "正解数",
+  "components.user.useraward": "称号",
   "home.bestPuzzleOfLastMonth": "先月スター数獲得上位問題",
   "home.body": "Cindy は水平思考パズル「ウミガメのスープ」のリアルタイム出題サイト。\nウミガメのスープは複数ユーザーでプレイする水平思考型推理ゲームです。\nYES/NOで答えることのできる質問をして不可解な謎を一緒に解き明かして行きましょう。",
   "home.description": "リアルタイムでウミガメのスープ問題を遊ぼう！",
@@ -113,6 +123,11 @@
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
   "toolbar.wiki": "Cindy+Wiki",
+  "user.currentUserProfileIsEmpty": "あなたはまだプロフィールを書いていません。個性豊かのユーザーを持つCindyでは、それが一大事です！今すぐ何かを書いて自分を紹介しましょう！",
+  "user.description": "ユーザープロフィールです",
+  "user.profileIsEmpty": "このユーザーはまだプロフィールを書いていません。",
+  "user.profileOf": "{nickname} のプロフィール",
+  "user.title": "ユーザープロフィール",
   "workbench.firstLoadingIsTimeConsuming": "文字解析用ツールをロードしています・・・初回ロードはネット状況によって数十秒から数分かかります・・・",
   "workbench.keywords": "キーワード",
   "workbench.mergePanel": "キーワード合併パネル",
