Add award checker
for
- puzzle count
- question count
- good question count
- true answer count

--- a/lang/en.json
+++ b/lang/en.json
@@ -26,6 +26,11 @@
   "common.loading": "Loading...",
   "common.none": "None",
   "common.notExist": "Page Not Exists",
+  "components.awardCheck.goToAwardsPage": "Go to awards page",
+  "components.awardCheck.goodQuestionCountReaches": "Congratulations! You've got {count} good questions and can get a new award!",
+  "components.awardCheck.puzzleCountReaches": "Congratulations! You've created {count} puzzles and can get a new award!",
+  "components.awardCheck.questionCountReaches": "Congratulations! You've asked {count} questions and can get a new award!",
+  "components.awardCheck.trueAnswerCountReaches": "Congratulations! You've got {count} true answers and can get a new award!",
   "components.chat.changeChannel": "Change Channel",
   "components.chat.changeToDefaultChannel": "Change To Default Channel",
   "components.chat.channelAsDefault": "Default ({channelName})",
