--- a/lang/ja.json
+++ b/lang/ja.json
@@ -26,6 +26,11 @@
   "common.loading": "ロード中です・・・",
   "common.none": "なし",
   "common.notExist": "このページは存在しません",
+  "components.awardCheck.goToAwardsPage": "称号一覧ページへ",
+  "components.awardCheck.goodQuestionCountReaches": "おめでとうございます！あなたの良質数が {count} に達し、新しい称号を獲得できるようになりました！",
+  "components.awardCheck.puzzleCountReaches": "おめでとうございます！あなたの出題数が {count} に達し、新しい称号を獲得できるようになりました！",
+  "components.awardCheck.questionCountReaches": "おめでとうございます！あなたの質問数が {count} に達し、新しい称号を獲得できるようになりました！",
+  "components.awardCheck.trueAnswerCountReaches": "おめでとうございます！あなたの正解数が {count} に達し、新しい称号を獲得できるようになりました！",
   "components.chat.changeChannel": "チャンネル変更",
   "components.chat.changeToDefaultChannel": "デフォルトに変更する",
   "components.chat.channelAsDefault": "デフォルト（{channelName}）",
