--- a/lang/en.json
+++ b/lang/en.json
@@ -17,11 +17,13 @@
   "auth.username": "Username",
   "common.all": "All",
   "common.apply": "Apply",
+  "common.applyToAll": "Apply To All",
   "common.back": "<< Back",
   "common.change": "Change",
   "common.close": "Close",
   "common.default": "Default",
   "common.editTimes": "[Edited ({count})]",
+  "common.filter": "Filter",
   "common.loadMore": "Load More",
   "common.loading": "Loading...",
   "common.none": "None",
@@ -136,7 +138,8 @@
   "workbench.firstLoadingIsTimeConsuming": "Now Loading text parsing tools, it may consume several minites for the first time...",
   "workbench.keywords": "Keywords",
   "workbench.mergePanel": "Merge Keywords",
-  "workbench.minKeywordAppearance": "Min appearance",
+  "workbench.oneByOneMode": "One-by-One Editing",
   "workbench.renamePanel": "Rename Keywords",
+  "workbench.roughMode": "Batch Editing",
   "workbench.selectPanel": "Select Keywords"
 }
