Add push notification

--- a/lang/en.json
+++ b/lang/en.json
@@ -133,6 +133,14 @@
   "user.profileIsEmpty": "This user does not have a profile",
   "user.profileOf": "{nickname}'s Profile",
   "user.title": "User Profile",
+  "webNotify.deniedMessage": "Notification seems to be disabled by your browser settings. Cindy will not send you messages.\nIf you find the notifications annoying, simply close the Cindy tab instead of block it. Cindy will not send you notifications when Cindy tab is not open.",
+  "webNotify.memoUpdated": "Memo for Puzzle \"{puzzle}\" is updated",
+  "webNotify.newDialogueAdded": "New Question Added",
+  "webNotify.newHintAdded": "New Hint Added",
+  "webNotify.newPuzzleAdded": "New Puzzle Added",
+  "webNotify.newPuzzleAddedDetail": "{user} adds a new puzzle \"{puzzle}\" of genre {genre}!",
+  "webNotify.notSupportedMessage": "Notification will be disabled as it is not supported in your browser.",
+  "webNotify.puzzleSolved": "Puzzle \"{puzzle}\" has been solved",
   "workbench.firstLoadingIsTimeConsuming": "Now Loading text parsing tools, it may consume several minites for the first time...",
   "workbench.keywords": "Keywords",
   "workbench.mergePanel": "Merge Keywords",
