--- a/lang/ja.json
+++ b/lang/ja.json
@@ -133,6 +133,14 @@
   "user.profileIsEmpty": "このユーザーはまだプロフィールを書いていません。",
   "user.profileOf": "{nickname} のプロフィール",
   "user.title": "ユーザープロフィール",
+  "webNotify.deniedMessage": "プッシュ通知があなたのブラウザー設定により禁止されたようです。新しい問題や質問がある時、Cindyはあなたにプッシュ通知を送れなくなります。\nもしプッシュ通知が邪魔だったら、Cindyのタブを閉じてください。Cindyはタブが閉じた時、あなたにプッシュ通知を送ることはありません。",
+  "webNotify.memoUpdated": "問題「{puzzle}」のメモが更新されました",
+  "webNotify.newDialogueAdded": "新しい質問があります",
+  "webNotify.newHintAdded": "新しいヒントがあります",
+  "webNotify.newPuzzleAdded": "新しい問題が出題されました",
+  "webNotify.newPuzzleAddedDetail": "{user} さんが新しい {genre} 問題「{puzzle}」を出題しました、参加してみよう！",
+  "webNotify.notSupportedMessage": "あなたのブラウザーはプッシュ通知をサポートしていないようです。プッシュ通知を受けるにはもっと新しいプラウザー（Edge 14 以上か、比較的に新しいバーションのSafariやFirefoxやChrome）を使ってください。",
+  "webNotify.puzzleSolved": "問題「{puzzle}」が解決されました",
   "workbench.firstLoadingIsTimeConsuming": "文字解析用ツールをロードしています・・・初回ロードはネット状況によって数十秒から数分かかります・・・",
   "workbench.keywords": "キーワード",
   "workbench.mergePanel": "キーワード合併パネル",
