--- a/lang/en.json
+++ b/lang/en.json
@@ -9,6 +9,8 @@
   "add_replay.description": "Create replay from puzzle in Cindy!",
   "add_replay.header": "Create Replay",
   "add_replay.title": "Replay Create Page",
+  "auth.date_joined": "Date Joined",
+  "auth.last_login": "Last Login",
   "auth.login": "Login",
   "auth.logout": "Logout",
   "auth.nickname": "Nickname",
