Polishes control panel

--- a/lang/en.json
+++ b/lang/en.json
@@ -95,9 +95,14 @@
   "puzzle.notExistDescription": "This puzzle does not exist!",
   "puzzle.putQuestion": "Ask",
   "puzzle.putSolution": "Put Solution",
+  "puzzle.setGrotesque": "Show grotesque warning",
   "puzzle.setHidden": "Set As Hidden",
+  "puzzle.setYami": "Make this puzzle yami",
   "puzzle.solveit": "Can you solve the puzzle?",
   "puzzle.title": "Puzzles",
+  "puzzle.unsetGrotesque": "Hide grotesque warning",
+  "puzzle.unsetHidden": "Make the puzzle open to public",
+  "puzzle.unsetYami": "Make this puzzle non-yami",
   "puzzle.waitForAnswer": "Wait for answer...",
   "puzzles.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
   "puzzles.header": "Puzzle List",
