--- a/lang/ja.json
+++ b/lang/ja.json
@@ -95,9 +95,14 @@
   "puzzle.notExistDescription": "この問題は存在しません",
   "puzzle.putQuestion": "質問",
   "puzzle.putSolution": "解説を出す",
+  "puzzle.setGrotesque": "グロ注意を表示する",
   "puzzle.setHidden": "非公開にする",
+  "puzzle.setYami": "闇スープにする",
   "puzzle.solveit": "この謎、解けますか？",
   "puzzle.title": "問題ページ",
+  "puzzle.unsetGrotesque": "グロ注意を非表示にする",
+  "puzzle.unsetHidden": "問題を公開する",
+  "puzzle.unsetYami": "闇スープにしない",
   "puzzle.waitForAnswer": "回答はまだです・・・",
   "puzzles.description": "遊びたいパズルを選ぼう。以前出題された問題を閲覧しよう。数多の水平思考パズルがあなたを待っています！",
   "puzzles.header": "問題一覧",
